--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="col-md-6 col-sm-12 text-center" data-aos="fade-left">
           <div class="hero-img-div">
-            <img class="hero-img" src="C:\Users\Vivek Salvi\Desktop\Banking-system-main\Banking-system-main\assets\media\4728933-removebg-preview.png" alt="img-showing-money-transfer">
+            <img class="hero-img" src="assets\media\4728933-removebg-preview.png" alt="img-showing-money-transfer">
           </div>
         </div>
       </div>
